# bloom

./: CMakeLists.txt  main.cpp
.github/workflows/: clang.yml  msvc.yml
interface/: app.cppm  bloom.cppm
interface/pipeline/: average_luminance_computer.cppm  bloom_downsample_computer.cppm  bloom_upsample_computer.cppm  diamond_image_computer.cppm  pipeline.cppm  tone_mapping_computer.cppm
interface/utils/: ranges.cppm  utils.cppm
shaders/: average_luminance.comp  bloom_downsample.comp  bloom_upsample.comp  diamond_image.comp  tone_mapping.comp
